--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,12 @@
   display: flex;
   flex-direction: column;
 }
+.private-notes-app {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
