--- a/src/components/note/note.style.css
+++ b/src/components/note/note.style.css
@@ -2,4 +2,8 @@
   display: flex;
   flex-direction: column;
   flex: 1 0 21%;
+  border: 2px solid gray;
+  margin: 0px 10px;
+  border-radius: 25px;
+  padding: 25px;
 }
