--- a/src/index.css
+++ b/src/index.css
@@ -6,20 +6,29 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+#root {
+  height: 100vh;
+}
 a {
   color: gray;
 }
 nav a {
-  color: black;
+  color: #969696;
   text-decoration: none;
 }
 .light {
   background-color: whitesmoke;
-  color: black;
+  color: rgb(219, 219, 219);
 }
 .dark {
-  background-color: black;
-  color: white;
+  background-color: #2c2c2c;
+  color: #969696;
+}
+.card-light {
+  background-color: rgb(157, 157, 157);
+}
+.card-dark {
+  background-color: #333333;
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
