added local storage system to implement consistent dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -19,8 +19,11 @@
   flex-direction: column;
 }
 
+.true {
+  color: #eee;
+  background-color: #333;
+}
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
